RESOLVED FIXED114474
(AVFoundation) WebKit fails to detect live stream.
https://bugs.webkit.org/show_bug.cgi?id=114474
Summary (AVFoundation) WebKit fails to detect live stream.
Jer Noble
Reported 2013-04-11 16:02:25 PDT
(AVFoundation) WebKit fails to detect live stream.
Attachments
Patch (2.48 KB, patch)
2013-04-11 16:08 PDT, Jer Noble
no flags
Patch (2.42 KB, patch)
2013-04-11 16:09 PDT, Jer Noble
no flags
Patch (2.00 KB, patch)
2013-04-12 11:41 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-04-11 16:02:48 PDT
Jer Noble
Comment 2 2013-04-11 16:08:16 PDT
Jer Noble
Comment 3 2013-04-11 16:09:53 PDT
Created attachment 197691 [details] Patch Fixed some whitespace issues.
Jer Noble
Comment 4 2013-04-12 11:41:28 PDT
Jer Noble
Comment 5 2013-04-12 12:07:59 PDT
Note You need to log in before you can comment on or make changes to this bug.